# tide-ws-rooms

./: Cargo.toml  Dockerfile  README.md
public/: index.html  index2.html  nba.txt  premier.txt  rust.txt  rustdc.txt  stream.html
public/css/: custom.css
src/: main.rs
