[package]
name = "tide-ws-rooms"
version = "0.1.0"
authors = ["Javier Viola <pepoviola@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
tide-websockets = "0.3.0"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_urlencoded = "0.7.0"
serde_qs = "0.8"
percent-encoding = "2.1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
futures = "0.3"
twitter-stream = "0.12"
broadcaster = "1.0.0"
serde_json = "1"
dotenv = "0.15"
env_logger = "0.8.2"
futures-util = "0.3.8"
serde_derive = "1.0.118"
regex = "1.4.4"
